# rbg

./: .gitmodules  LICENSE  changelog.md  prepare.sh  readme.md
games/: amazons-split.rbg  amazons.rbg  arimaa-fixedPosition.rbg  arimaa-split.rbg  arimaa.rbg  breakthrough.rbg  chess-200.rbg  chess-fiftyMove.rbg  chess-kingCapture-200.rbg  chess-kingCapture.rbg  chess.rbg  chineseCheckers6.rbg  connect4.rbg  doubleChess-400.rbg  doubleChess.rbg  englishCheckers.rbg  englishDraughts-split.rbg  englishDraughts.rbg  go.rbg  gomoku-freeStyle.rbg  gomoku-standard.rbg  gomoku.rbg  hex.rbg  hex_9x9.rbg  internationalCheckers.rbg  internationalDraughts.rbg  knightthrough.rbg  paperSoccer.rbg  reversi.rbg  skirmish.rbg  theMillGame.rbg  ticTacToe.rbg
rbg2cpp/: Makefile
rbg2cpp/inc/: actions_compiler.hpp  arithmetics_printer.hpp  automaton.hpp  automaton_builder.hpp  compiler_options.hpp  cpp_container.hpp  edge.hpp  game_compiler.hpp  precomputed_pattern.hpp  shift_table.hpp  state.hpp
rbg2cpp/src/: actions_compiler.cpp  arithmetics_printer.cpp  automaton.cpp  automaton_builder.cpp  compiler_options.cpp  cpp_container.cpp  edge.cpp  game_compiler.cpp  main.cpp  precomputed_pattern.cpp  shift_table.cpp  state.cpp
rbg2cpp/test/: perft.cpp  simulation.cpp
rbgInterpreter/: CMakeLists.txt
rbgInterpreter/src/: benchmark.cc  material_heuristic_client.cc  random_client.cc  run_server.cc
rbgInterpreter/src/actions/: action.cc  action.h  action_application.h  action_types.h  arithmetic_operation.cc  arithmetic_operation.h
rbgInterpreter/src/game_components/: game_description.h  game_state.cc  game_state.h  graph_board.h  move.h  name_resolver.h  search_context.cc  search_context.h
rbgInterpreter/src/game_nfa/: automaton.h  game_moves_description.h
rbgInterpreter/src/networking/: client.h  message.h  networking_utils.cc  networking_utils.h  server.cc  server.h
rbgInterpreter/src/parser_connection/: arithmetic_creator.cpp  arithmetic_creator.h  game_nfa_creator.cc  game_nfa_creator.h  parser_connection.cc  parser_connection.h
rbgInterpreter/src/utils/: fast_bit_vector.h  global_config.cpp  utilities.h
rbgParser/: CMakeLists.txt  Makefile
rbgParser/src/: abstract_dispatcher.hpp  arithmetic_comparison.cpp  arithmetic_comparison.hpp  arithmetic_expression.hpp  arithmetic_operation.cpp  arithmetic_operation.hpp  arrow_leaf.cpp  arrow_leaf.hpp  assignments.cpp  assignments.hpp  bracketed_expression.cpp  bracketed_expression.hpp  concatenation.cpp  concatenation.hpp  cuboid3D.cpp  cuboid3D.hpp  declarations.cpp  declarations.hpp  game_items.cpp  game_items.hpp  game_move.hpp  graph.cpp  graph.hpp  graph_builder.hpp  hexagon2D.cpp  hexagon2D.hpp  identifier_leaf.cpp  identifier_leaf.hpp  integer_arithmetic.cpp  integer_arithmetic.hpp  integer_leaf.cpp  integer_leaf.hpp  internal_node.cpp  internal_node.hpp  macro_bank.cpp  macro_bank.hpp  main.cpp  message.cpp  message.hpp  move_check.cpp  (+44 more)
scripts/: compiler_benchmark.sh  interpreter_benchmark.sh  interpreter_test.sh  make.sh
